Revert "Updated show on scroll animation" overflow-x issue with mobile layout This reverts commit 4a709d2cbfc81b78d5b52be41427460b80c11eb7.

--- a/styles/style.css
+++ b/styles/style.css
@@ -902,14 +902,10 @@ img.mcgill, img.cpk{
 
 .to-show-on-scroll{
   opacity: 0;
-  transform: translateY(10%) translateX(10%) rotateZ(15deg);
-  -webkit-transform: translateY(10%) translateX(10%) rotateZ(15deg);
-  -moz-transform: translateY(10%) translateX(10%) rotateZ(15deg);
-
+  transform: translateY(10%);
   transition: all 0.5s ease-out;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
-  
   transition-delay: 0.25s;
   -webkit-transition-delay: 0.25s;
   -moz-transition-delay: 0.25s;
@@ -917,10 +913,7 @@ img.mcgill, img.cpk{
 
 .scroll-animation {
   opacity: 1;
-  
-  transform: none;
-  -webkit-transform: none;
-  -moz-transform: none;
+  transform: translateY(0);
 }
 
 .minimized{
